--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,43 @@ volumes:
   database:
 
 services:
+  app:
+    restart: "no"
+    volumes:
+      - ./:/var/www
+      - ./docker/php.ini-development:/usr/local/etc/php/conf.d/php.ini-development.ini
+    networks:
+      - laravel
+    build:
+      context: .
+      dockerfile: ./docker/dockerfile
+
+  queue:
+    depends_on:
+      - app
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel
+    build:
+      context: .
+      dockerfile: ./docker/dockerfile
+    command: queue
+
+  webserver:
+    image: nginx:stable
+    restart: "no"
+    volumes:
+      - ./:/var/www
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - laravel
+    ports:
+      - ${DOCKER_WEBSERVER_PORT}:80
+    depends_on:
+      - database
+      - app
+
   database:
     image: mysql:8.0.22
     restart: "no"
@@ -24,30 +61,3 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
       MYSQL_INITDB_SKIP_TZINFO: "yes"
     command: --default-authentication-plugin=mysql_native_password --local-infile
-
-  app:
-    restart: "no"
-    volumes:
-      - ./:/var/www
-    environment:
-      APP_ENV: ${APP_ENV}
-    networks:
-      - laravel
-    build:
-      context: .
-      dockerfile: ./docker/dockerfile
-    command: server
-
-  webserver:
-    image: nginx:stable
-    restart: "no"
-    volumes:
-      - ./:/var/www
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - laravel
-    ports:
-      - ${DOCKER_WEBSERVER_PORT}:80
-    depends_on:
-      - database
-      - app
