--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,6 +6,31 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/public;
 
+
+    # https://laravel.com/docs/8.x/deployment
+    # Security
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    # Allow uploads
+    client_max_body_size 10M;
+
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300; 
+
+    # https://geekflare.com/laravel-optimization/
+    # gzip compression settings
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
@@ -19,6 +44,13 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        # https://stackoverflow.com/questions/64472691/nginx-web-server-error-upstream-sent-too-big-header-while-reading-response-hea
+        fastcgi_buffers 8 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_connect_timeout 90;
+        fastcgi_send_timeout 90;
+        fastcgi_read_timeout 90;
 
         # Uncomment to extend nginx's max timeout to 1 hour
         # fastcgi_read_timeout 3600;
